<resources>
    <string name="facebook_app_id" translatable="false">237270140102886</string>
    <string name="google_android_map_api_key" translatable="false">AIzaSyBGu9x1t1aNaq1ZUJQyeeqHbkir3tepCJo</string>
    <string name="ad_banner_id" translatable="false">ca-app-pub-8023119556052962/9198338990</string>
    <string name="ad_interstitial_id" translatable="false">ca-app-pub-8023119556052962/3763847780</string>
    <string name="app_name">UHelpMe</string>
    <string name="str_no">No</string>
    <string name="str_yes">Yes</string>
    <string name="str_please_wait">Please wait…</string>
    <string name="str_no_internet_connection_available">No internet connection available</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="str_create_account">Create an account</string>
    <string name="termsConditions">By creating your account, you accept the <b> general conditions</b> of <b>UHelpMe</b></string>
    <string name="more_details">More Details</string>
    <string name="decline">Decline</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_login">Log in</string>
    <string name="str_forget_pwd">Forgot your password?</string>
    <string name="str_or">OR</string>
    <string name="str_view_all_offers">View all offers</string>
    <string name="str_login_failed">Login failed</string>
    <string name="str_general_condition">condition</string>
    <string name="str_header">Create An Account</string>
    <string name="str_condition">By Creating Your Account.You Accept</string>
    <string name="str_condition1">the</string>
    <string name="str_back">Back</string>
    <string name="str_review_ratting">Review And Ratting</string>
    <string name="str_reward">Reward</string>
    <string name="str_setting">Setting</string>
    <string name="str_add_feedback">Add FeedBack</string>
    <string name="str_sign_out">SIGN OUT</string>
    <string name="str_help_me">UHelpMe</string>
    <string name="str_view">View a U</string>
    <string name="str_basic_information">Basic Information</string>
    <string name="str_title">Title</string>
    <string name="str_description">Description</string>
    <string name="next_step">Next Step</string>
    <string name="str_take_photo">Take Photo (optional)</string>
    <string name="str_location">Location</string>
    <string name="str_your_location">Your Location</string>
    <string name="str_category">Category</string>
    <string name="str_and_finally">And Finally</string>
    <string name="str_amount">Amount</string>
    <string name="str_view_my">View My</string>
    <string name="title_activity_maps">Map</string>
    <string name="str_my_profile">My Profile</string>
    <string name="str_review_rating">Review and ratings</string>
    <string name="str_rewards">Rewards</string>
    <string name="str_packages">Packages</string>
    <string name="str_payments">Payments</string>
    <string name="str_settings">Settings</string>
    <string name="str_app_feedback">App feedback</string>
    <string name="str_signout">SIGN OUT</string>
    <string name="str_ratings">Ratings</string>
    <string name="str_points">Points</string>
    <string name="str_HelpMe">HelpMe</string>
    <string name="str_offered">Offered</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="str_personal_info">Personal Information</string>
    <string name="str_profile_info">Profile Information</string>
    <string name="My_Offer">My Offer</string>
    <string name="str_select_profile_photo">Select photo</string>
    <string name="str_camera">Camera</string>
    <string name="str_gallery">Gallery</string>
    <string name="Time_Remaining">Time Remaining :</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="dashboard">Dashboard</string>
    <string name="chatroom">Chatroom</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_account">Create account</string>
    <string name="ok">OK</string>
    <string name="current_offers">Current Offers</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="select_product">Select Product</string>
    <string name="provide_a_group_subject">Provide a group subject</string>
    <string name="type_group_subject_here">Type group subject here…</string>
    <string name="enter_your_offer_amount">Enter your offer amount</string>
    <string name="offer_amount">Offer amount</string>
    <string name="cancel">Cancel</string>
    <string name="select_packages">Select Packages</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="paypal">PayPal</string>
    <string name="stripe">Credit Card</string>
    <string name="loading">Loading…</string>
    <string name="share_your_feedback_with_us">Share your feedback with us</string>
    <string name="submit">Submit</string>
    <string name="old_password">Old PassWord</string>
    <string name="new_password">New PassWord</string>
    <string name="re_enter_password">Re-Enter PassWord</string>
    <string name="search_user_and_group">Search user and group</string>
    <string name="create_new_group">Create New Group</string>
    <string name="search_user">Search User</string>
    <string name="type_here">Type here…</string>
    <string name="group_members">Group Members</string>
    <string name="category">Category :</string>
    <string name="best_offer">Best Offer</string>
    <string name="location">Location</string>
    <string name="category_search">Category Search</string>
    <string name="keyword_search">KeyWord Search</string>
    <string name="help_information">Help Information</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category_information">Category Information</string>
    <string name="time_and_amount_information">Time and Amount Information</string>
    <string name="select_date">Select date</string>
    <string name="select_hours">Select hours</string>
    <string name="update">Update</string>
    <string name="reviews">Reviews</string>
    <string name="current_balance">Current balance</string>
    <string name="view_all_packages">View all packages</string>
    <string name="active_payment_method">Active Payment Method</string>
    <string name="currently_have_no_any_active_payment_method">Currently have no any active payment method</string>
    <string name="add_another_method">Add another method</string>
    <string name="telephone">Telephone</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="my_profile">My Profile</string>
    <string name="reviews_and_ratings">Ratings &amp; Reviews</string>
    <string name="rewards">Rewards</string>
    <string name="packages">Packages</string>
    <string name="payments">Payments</string>
    <string name="settings">Settings</string>
    <string name="app_feedback">App Feedback</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="points">POINTS</string>
    <string name="learn_more">Earn More</string>
    <string name="redeem_points">Redeem Points</string>
    <string name="search_places">Search places</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app_with_friends">Share App with Friends</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="help_post">HELP POST</string>
    <string name="credit_points">CREDIT POINTS</string>
    <string name="paypal_payment">PayPal Payment</string>
    <string name="help_me">Help Me</string>
    <string name="add_new_member">Add new member</string>
    <string name="correct_distance_data">You will not get correct distance data</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_valid_email">Enter valid email address</string>
    <string name="enter_password">Enter password</string>
    <string name="general_conditions">By creating your account, you accept the</string>
    <string name="link"><![CDATA[<a color=\"#0095d7\"href=\"http://www.uhelpme.com/termsandconditions.html/\"> Terms & Conditions</a> of <b>UHelpMe</b>]]></string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="admin">(Admin)</string>
    <string name="valid_hours">select valid hours</string>
    <string name="type_group_subject">Type group subject</string>
    <string name="myhelpme">MyHelpMe</string>
    <string name="myoffers">MyOffers</string>
    <string name="my_helpme">My HelpMe</string>
    <string name="my_offers">My Offers</string>
    <string name="update_your_offer">Update your offer</string>
    <string name="enter_amount">Enter amount</string>
    <string name="offer_placed">Offer successfully placed</string>
    <string name="enter_offer_amount">Enter your offer amount</string>
    <string name="select_time_limits">Select Time limits</string>
    <string name="today">Today</string>
    <string name="other_day">Other days</string>
    <string name="updated">updated</string>
    <string name="enter_help_title">Enter help title</string>
    <string name="enter_help_description">Enter help description</string>
    <string name="select_category">select category for help post</string>
    <string name="select_required_hours">select required hour\'s time limits</string>
    <string name="enter_amount_time_limits">enter amount for time limits</string>
    <string name="select_required_date_limit">select required date time limits</string>
    <string name="select_hours_time_liimit">select required hour\'s time limits</string>
    <string name="view_a_u">View a U</string>
    <string name="font_color"><![CDATA[<font color=\"#0095d7\">]]></string>
    <string name="helpme">HelpMe</string>
    <string name="font"><![CDATA[<font>]]></string>
    <string name="your_location">your location</string>
    <string name="thank_you">Thank You</string>
    <string name="write_your_review">Please write your reviews</string>
    <string name="passwrd_changed_successfully">Password Change Successfully</string>
    <string name="enter_old_password">Enter Old PassWord</string>
    <string name="enter_new_password">Enter New PassWord</string>
    <string name="enter_re_enter_password">Enter Re-Enter PassWord</string>
    <string name="password_not_matched">password and confirm password does not matched</string>
    <string name="old_pass_invalid">Old password is invalid</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_country">please select country first</string>
    <string name="select_state">please select state first</string>
    <string name="profile_updated">Profile updated</string>
    <string name="str_distance">I want to be informed when user posts a help</string>
    <string name="str_km">Within (Distance) km</string>
    <string name="str_payment">Payment</string>
    <string name="this_help_is_on_hourly_base_so_enter_the_number_of_work_s_hours">This help is on hourly base. So, enter the number of work\'s hours</string>
    <string name="str_back_to_menu">BACK TO MAIN MENU</string>
    <string name="str_make_new_help">MAKE A NEW HELP</string>
    <string name="str_cancel_help">CANCEL THE HELP IN PROGRESS</string>
    <string name="str_choose_action">CHOOSE AN ACTION</string>
</resources>