<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_enter_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:text="@string/enter_your_offer_amount"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edt_enter_offer"
        style="@style/editTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/offer_amount"
        android:inputType="number"
        android:maxLength="10"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/btn_actionCancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end"
            style="@style/buttonStyle"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <Button
            style="@style/buttonStyle"
            android:id="@+id/btn_actionOk"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginLeft="10dp"
            android:onClick="onClick"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>