<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dialogHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorDialogTitle"
            android:padding="10dp"
            android:text="@string/str_choose_action"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorDialogTitle"
            android:paddingRight="10dp"
            android:src="@drawable/img_arrow_selectbox" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_backToMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/str_back_to_menu"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDialogTitle" />

    <TextView
        android:id="@+id/tv_makeNewHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/str_make_new_help"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorDialogTitle" />

    <TextView
        android:id="@+id/tv_cancelHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/str_cancel_help"
        android:textColor="@android:color/black"
        android:textSize="15sp" />
</LinearLayout>