<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_chat_background">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/img_logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_email" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_userName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_UserName"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/str_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorHint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_password" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_password"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:maxLength="20" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorHint" />

        <Button
            android:id="@+id/btn_login"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/drw_button_shape"
            android:onClick="onClick"
            android:text="@string/str_login"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txv_forget_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/str_forget_pwd"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/str_or"
            android:textAllCaps="true"
            android:textColor="#020202"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_login_facebook"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/img_fb_login"
            android:onClick="onClick"
            android:text="@string/login_with_facebook"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/drw_border_button"
            android:onClick="onClick"
            android:text="@string/str_create_account"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/adViewH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <com.google.android.gms.ads.AdView
            android:id="@+id/sigin_in_adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/ad_banner_id" />
    </LinearLayout>
</RelativeLayout>
