<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#E9E5E4"
        android:gravity="center"
        android:text="@string/str_distance"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/str_km"
            android:textColor="@color/colorTextGray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:max="50"
            android:progress="10" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/str_category"
            android:textColor="@color/colorTextGray"
            android:textSize="12sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#E9E5E5"
            android:orientation="horizontal" />


        <Button
            android:id="@+id/btn_update"
            style="@style/buttonStyle"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="Update" />
    </LinearLayout>
</LinearLayout>